Replace new by valueOf for basic types